--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,12 +1,12 @@
 project:
   type: book
   output-dir: docs
-  output-file: "Zane-SR-Notes"
 
 book:
   title: "Statistical Rethinking notes and exercises"
   author: "Zane Billings"
   date: "6/21/2022"
+  output-file: "Zane-SR-Notes"
   repo-url: https://github.com/wzbillings/SR-notes/
   repo-actions: [issue, source]
   sharing: [twitter]
@@ -16,6 +16,7 @@ book:
     - cp1.qmd
     - cp2.qmd
     - cp3.qmd
+    - cp4.qmd
     - references.qmd
 
 bibliography: references.bib
