feat: new chapter page

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -30,6 +30,7 @@ book:
         - cp4.qmd
         - cp5.qmd
         - cp6.qmd
+        - cp7.qmd
     - part: "2023 Homework"
       chapters:
         - week1.qmd
