feat: cp 7 upadtes n rebuild

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -31,11 +31,11 @@ book:
         - cp5.qmd
         - cp6.qmd
         - cp7.qmd
-    - part: "2023 Homework"
-      chapters:
-        - week1.qmd
-        - week2.qmd
-        - week3.qmd
+    # - part: "2023 Homework"
+    #   chapters:
+    #     - week1.qmd
+    #     - week2.qmd
+    #     - week3.qmd
     - references.qmd
 
 bibliography: references.bib
